--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -6,5 +6,6 @@
 </head> 
 <body> 
     <script src="hello.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </body> 
 </html
